samples/_failures_safe/1761665713_aa5fac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4881be17.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_4881be17.c:145:5: error: expected declaration or statement at end of input
  145 |     for (uint32_t i = 0; i < samples; i++) {
      |     ^~~
./samples/SAFE/__tmp_4881be17.c:145:5: error: expected declaration or statement at end of input
